# static_containers

./: CMakeLists.txt  README.md
include/: containerstorage.hpp  staticmap.hpp  staticvector.hpp
include/stc/: common.hpp  container_storage.hpp  static_map.hpp  static_vector.hpp
tests/: common.hpp  static_map.cpp  static_vector.cpp
tests/lib/flg/: flags.hpp
tests/lib/probe/: probe.hpp
